[gd_scene load_steps=5 format=3 uid="uid://b7kuxbmh1bcmg"]

[ext_resource type="Script" uid="uid://bnbkvutdh7cbv" path="res://scripts/settings.gd" id="1_ok4lx"]
[ext_resource type="PackedScene" uid="uid://g6mjwrsvy0mi" path="res://scene/custom_components/option_dropdown.tscn" id="2_ok4lx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0l8b"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.101961, 0.105882, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp4xf"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.192157, 0.258824, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ok4lx")

[node name="MarginContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v0l8b")

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 9

[node name="title" type="HBoxContainer" parent="MarginContainer/Main"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Main/title"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Main"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="PanelContainer" parent="MarginContainer/Main/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wp4xf")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="WindowExpand" parent="MarginContainer/Main/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_ok4lx")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="MarginContainer/Main/ScrollContainer/MarginContainer/VBoxContainer/WindowExpand" index="0"]
text = "Window Expand:"

[node name="OptionButton" parent="MarginContainer/Main/ScrollContainer/MarginContainer/VBoxContainer/WindowExpand" index="1"]
item_count = 5
popup/item_0/text = "1.0"
popup/item_1/text = "1.2"
popup/item_2/text = "1.5"
popup/item_2/id = 2
popup/item_3/text = "1.8"
popup/item_3/id = 3
popup/item_4/text = "2.0"
popup/item_4/id = 4

[node name="footer" type="HBoxContainer" parent="MarginContainer/Main"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/Main/footer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Save"

[connection signal="item_selected" from="MarginContainer/Main/ScrollContainer/MarginContainer/VBoxContainer/WindowExpand" to="." method="_on_window_expand_item_selected"]
[connection signal="pressed" from="MarginContainer/Main/footer/Button" to="." method="_on_button_pressed"]

[editable path="MarginContainer/Main/ScrollContainer/MarginContainer/VBoxContainer/WindowExpand"]
